# galileo_matrix

./: Cargo.toml  README.md  Rocket.toml  galileo-matrix.service  start.sh
src/: database.rs  main.rs  models.rs  req_guards.rs  server.rs
