[package]
name = "galileo_matrix"
version = "0.1.0"
authors = ["Randoms <newnewton@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.cached]
version = "0.13.0"
git = "https://github.com/randoms/cached"
